ex3/testdata/typechecker/error/MDeclTest-err1.java
class MDeclTest {
	public static void main(String[] a){
    }
}
